# Optimizer-History

./: .gitattributes  CMakeLists.txt  Makefile  clevor_se.sln  clevor_se.vcxproj  clevor_se.vcxproj.filters
clp/: And.cpp  And.h  Bound.cpp  Bound.h  BoundCt.cpp  BoundCt.h  BoundPropagator.cpp  BoundPropagator.h  ChoicePoint.cpp  ChoicePoint.h  ConstrainedBound.cpp  ConstrainedBound.h  ConstrainedVar.cpp  ConstrainedVar.h  Constraint.cpp  Constraint.h  CountedIntVar.cpp  CountedIntVar.h  CycleGroup.cpp  CycleGroup.h  FailEx.cpp  FailEx.h  Goal.cpp  Goal.h  IntExp.cpp  IntExp.h  IntExpArray.cpp  IntExpArray.h  IntExpDomain.cpp  IntExpDomain.h  IntExpDomainAR.cpp  IntExpDomainAR.h  IntExpDomainARit.cpp  IntExpDomainARit.h  IntExpDomainCAR.cpp  IntExpDomainCAR.h  IntExpDomainCARit.cpp  IntExpDomainCARit.h  IntExpDomainIt.cpp  IntExpDomainIt.h  (+26 more)
cls/: Activity.cpp  Activity.h  BrkActivity.cpp  BrkActivity.h  CapExpMgr.cpp  CapExpMgr.h  CompositeResource.cpp  CompositeResource.h  CompositeResourceRequirement.cpp  CompositeResourceRequirement.h  CompositeSpan.cpp  CompositeSpan.h  CompositeTimetable.cpp  CompositeTimetable.h  CompositeTimetableDomain.cpp  CompositeTimetableDomain.h  DiscreteResource.cpp  DiscreteResource.h  DiscreteResourceRequirement.cpp  DiscreteResourceRequirement.h  DiscreteTimetable.cpp  DiscreteTimetable.h  DiscreteTimetableDomain.cpp  DiscreteTimetableDomain.h  EFbound.cpp  EFbound.h  EFboundInt.cpp  EFboundInt.h  ESbound.cpp  ESbound.h  ESboundCalendar.cpp  ESboundCalendar.h  ESboundInt.cpp  ESboundInt.h  ESboundTimetable.cpp  ESboundTimetable.h  IntActivity.cpp  IntActivity.h  LFbound.cpp  LFbound.h  (+27 more)
cse/: AltJobMutate.cpp  AltJobMutate.h  AltJobSelector.cpp  AltJobSelector.h  AltResMutate.cpp  AltResMutate.h  AltResSelector.cpp  AltResSelector.h  AuditReport.cpp  AuditReport.cpp.backup.Jan6  AuditReport.h  AuditReport.h.backup.Jan6  CapMutate.cpp  CapMutate.h  CapSelector.cpp  CapSelector.h  ClevorDataSet.cpp  ClevorDataSet.h  CompositeResource.cpp  CompositeResource.h  DiscreteResource.cpp  DiscreteResource.h  EvaluatorFactory.cpp  EvaluatorFactory.h  ForwardScheduler.cpp  ForwardScheduler.h  ItemRequirement.cpp  ItemRequirement.h  Job.cpp  Job.cpp.bkup  Job.h  Job.h.bkup  JobGroup.cpp  JobGroup.h  JobOp.cpp  JobOp.h  JobOpOrdering.cpp  JobOpOrdering.h  JobOpSeqMutate.cpp  JobOpSeqMutate.h  (+92 more)
etc/: Git-VS-Bash.cmd  Makefile  doxygen.cfg  line-count  make-docs  packages-required  source-hdr-add  windows
etc/shelved/clp/: IntExpArray.cpp  IntExpArray.h  IntSpanArray.cpp  IntSpanArray.h  Invalidatible.h
etc/shelved/cse/: SchedulerFactory.h
etc/shelved/lut/: RBtree.cpp  RBtreeNode.cpp
etc/shelved/mps/: MPSclient.h  MPSdataSet.cpp  MPSdataSet.h  MPSitem.h  MPSserver.cpp
etc/shelved/mrp/: AlternateResources.cpp  BOM.cpp  CompositeResource.cpp  CompositeResource.h  DiscreteResource.cpp  InventoryInterval.cpp  InventoryInterval.h  InventoryRecord.cpp  InventoryRecord.h  InventoryTransaction.h  Item.cpp  ItemPlanRelation.cpp  ItemPlanRelation.h  MRPdataSet.cpp  MRPdataSet.h  MRPrun.cpp  MRPserver.cpp  Makefile  PlanStepRelation.cpp  PlanStepRelation.h  ProcessPlan.cpp  ProcessPlan.h  ProcessStep.cpp  PurchaseItem.cpp  PurchaseItem.h  PurchaseOrder.cpp  Resource.cpp  Resource.h  ResourceGroup.cpp  Setup.h  SetupGroup.cpp  StepAltResCapPts.cpp  StepAltResCapPts.h  StepItemRequirement.cpp  StepItemRequirement.h  libmrp.h
etc/test/: Makefile  test-1  test-2
gop/: AR_SAoptimizer.cpp  AR_SAoptimizer.h  ConfigEx.cpp  ConfigEx.h  DataSet.cpp  DataSet.h  HillClimber.cpp  HillClimber.h  ID_SAoptimizer.cpp  ID_SAoptimizer.h  Ind.cpp  Ind.h  IndBuilder.cpp  IndBuilder.h  IndBuilderContext.cpp  IndBuilderContext.h  IndEvaluator.cpp  IndEvaluator.h  IndEvaluatorConfiguration.cpp  IndEvaluatorConfiguration.h  MultistartHC.cpp  MultistartHC.h  MultistartSA.cpp  MultistartSA.h  Objective.cpp  Objective.h  Operator.cpp  Operator.h  OperatorVar.cpp  OperatorVar.h  Optimizer.cpp  Optimizer.h  OptimizerConfiguration.cpp  OptimizerConfiguration.h  Population.cpp  Population.h  RandomWalk.cpp  RandomWalk.h  RevOperator.cpp  RevOperator.h  (+13 more)
lut/: Factory.h  Functor.cpp  Functor.h  OverlapFinder.h  Queue.h  RBtree.cpp  RBtree.h  RBtreeNode.cpp  RBtreeNode.h  RCobject.cpp  RCobject.h  SkipListDepthArray.cpp  SkipListDepthArray.h  SpanWatcher.h  liblut.h  lut_util.cpp  lut_util.h  macros.h  types.h  util.cpp  util.h
main/: bt.cpp  clevor_se.cpp  main.h  test1.cpp  test2.cpp
makefiles/: Makefile.top.local  config
makefiles/linux/: Makefile.build.local  Makefile.config.local
makefiles/mingw/: Makefile  Makefile.build.local  Makefile.config.local
mps/: MPSclient.cpp  MPSclient.h  MPSdataSet.cpp  MPSdataSet.h  MPSitem.cpp  MPSitem.h  MPSitemPeriod.cpp  MPSitemPeriod.h  MPSrun.cpp  MPSrun.h  MPSserver.cpp  MPSserver.h  ServerApp.cpp  ServerApp.h  libmps.h
mrp/: AlternateResources.cpp  AlternateResources.h  BOM.cpp  BOM.h  CompositeResource.cpp  CompositeResource.h  DiscreteResource.cpp  DiscreteResource.h  InventoryInterval.cpp  InventoryInterval.h  InventoryRecord.cpp  InventoryRecord.h  InventoryTransaction.cpp  InventoryTransaction.h  Item.cpp  Item.h  ItemPlanRelation.cpp  ItemPlanRelation.h  MRPclient.cpp  MRPclient.h  MRPdataSet.cpp  MRPdataSet.h  MRPrun.cpp  MRPrun.h  MRPserver.cpp  MRPserver.h  ManufactureItem.cpp  ManufactureItem.h  PlanStepRelation.cpp  PlanStepRelation.h  ProcessPlan.cpp  ProcessPlan.h  ProcessStep.cpp  ProcessStep.h  PurchaseItem.cpp  PurchaseItem.h  PurchaseOrder.cpp  PurchaseOrder.h  Resource.cpp  Resource.h  (+15 more)
script/: Git-VS-Bash.cmd  build-init  cse-build  cse-build-config  cse-build-docs  cse-build-init  cse-build-system-init  cse-build-update  cse-clean  cse-clean-config  cse-distclean  cse-git-status  cse-install-deps  cse-install-deps-linux  cse-install-deps-windows  cse-required  init.sh  recursive.sh  require-admin.sh
